--- a/css/burps.css
+++ b/css/burps.css
@@ -1,3 +1,16 @@
 body {
     background-color: #F0F0F0;
+    margin: 0px;
+    padding: 0px;
+}
+
+div {
+    margin: 0px;
+    padding: 0px;
+}
+
+#controls {
+    float: left;
+    height: 100%;
+    margin-right: 10px;
 }
