--- a/css/burps.css
+++ b/css/burps.css
@@ -45,3 +45,19 @@ table, tr, td {
     margins: 0px;
     border-collapse: collapse;
 }
+
+input {
+    border: 0px;
+    border-bottom: 1px solid #B0B0B0;
+    padding: 0.1em 0.3em 0.1em 0.3em;
+}
+
+input:hover {
+    background-color: #F0E8E0;
+}
+
+input.small {
+    border: 0px;
+    width: 2.5em;
+    text-align: center;
+}
